--- a/pom.xml
+++ b/pom.xml
@@ -28,8 +28,8 @@
         </dependency>
         <dependency>
             <groupId>org.hibernate</groupId>
-            <artifactId>hibernate-annotations</artifactId>
-            <version>3.5.6-Final</version>
+            <artifactId>hibernate-entitymanager</artifactId>
+            <version>3.6.10.Final</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.data</groupId>
