--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -6,7 +6,26 @@
     <display-name>4th Interview</display-name>
     <description>Convenience web application for technical interviews</description>
 
+    <context-param>
+        <param-name>contextConfigLocation</param-name>
+        <param-value>classpath:*-context.xml</param-value>
+    </context-param>
+
+    <listener>
+        <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+    </listener>
     
+    <!-- 
+    <servlet>
+        <servlet-name>dfa</servlet-name>
+        <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+    </servlet>
+    
+    <servlet-mapping>
+        <servlet-name>dfa</servlet-name>
+        <url-pattern></url-pattern>
+    </servlet-mapping>
+     -->
 
     <welcome-file-list>
         <welcome-file>index.html</welcome-file>
