--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -7,8 +7,17 @@ log4j.appender.stdout.Target=System.out
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%d{ABSOLUTE} [%p] (%t) %c: %m%n
 
-log4j.logger.org.springframework.data=DEBUG
+log4j.logger.org.springframework.data=INFO
 log4j.logger.org.springframework.beans=INFO
 log4j.logger.org.springframework.test=INFO
 log4j.logger.org.springframework.context=INFO
 log4j.logger.org.springframework.core=INFO
+log4j.logger.org.springframework.orm=INFO
+log4j.logger.org.springframework.aop=INFO
+log4j.logger.org.springframework.jdbc=INFO
+log4j.logger.org.springframework.transaction=INFO
+log4j.logger.org.springframework.ui=INFO
+log4j.logger.org.springframework.web=INFO
+log4j.logger.org.springframework.jndi=INFO
+log4j.logger.org.hibernate=INFO
+log4j.logger.org.jboss=INFO
