Almost finished the data model. Started adding logging via AOP

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -19,5 +19,5 @@ log4j.logger.org.springframework.transaction=INFO
 log4j.logger.org.springframework.ui=INFO
 log4j.logger.org.springframework.web=INFO
 log4j.logger.org.springframework.jndi=INFO
-log4j.logger.org.hibernate=DEBUG
+log4j.logger.org.hibernate=INFO
 log4j.logger.org.jboss=INFO
