Changed a few things about the UI and added a controller.

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -23,6 +23,17 @@
     
     <servlet-mapping>
         <servlet-name>dispatcher</servlet-name>
+        <url-pattern>/service/*</url-pattern>
+    </servlet-mapping>
+    
+    <servlet>
+        <servlet-name>content</servlet-name>
+        <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+        <load-on-startup>1</load-on-startup>
+    </servlet>
+    
+    <servlet-mapping>
+        <servlet-name>content</servlet-name>
         <url-pattern>*.html</url-pattern>
     </servlet-mapping>
 
