--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
             <version>3.1.3.RELEASE</version>
         </dependency>
         <dependency>
-            <groupId>aspectj</groupId>
+            <groupId>org.aspectj</groupId>
             <artifactId>aspectjtools</artifactId>
             <version>1.5.4</version>
         </dependency>
