Started overhaul to get the app simpler.

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,4 +1,4 @@
-log4j.rootLogger=DEBUG, stdout, file
+log4j.rootLogger=DEBUG, stdout
  
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.Target=System.out
@@ -24,5 +24,5 @@ log4j.logger.org.springframework.transaction=INFO
 log4j.logger.org.springframework.ui=INFO
 log4j.logger.org.springframework.web=INFO
 log4j.logger.org.springframework.jndi=INFO
-log4j.logger.org.hibernate=DEBUG
+log4j.logger.org.hibernate=INFO
 log4j.logger.org.jboss=INFO
