--- a/pom.xml
+++ b/pom.xml
@@ -13,44 +13,71 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+		
+		<!-- Library dependencies -->
+		<guava-version>14.0.1</guava-version>
+		<spring-aop-version>3.2.2.RELEASE</spring-aop-version>
+		<spring-webmvc-version>3.2.2.RELEASE</spring-webmvc-version>
+		<groovy-all-version>2.1.3</groovy-all-version>
+		<joda-time-version>2.2</joda-time-version>
+		<joda-time-hibernate-version>1.3</joda-time-hibernate-version>
+		<jstl-version>1.2</jstl-version>
+		<slf4j-api-version>1.7.5</slf4j-api-version>
+        <slf4j-log4j12-version>1.7.5</slf4j-log4j12-version>
+		
+		<!-- App server provided libraries -->
+		<servlet-api-version>2.5</servlet-api-version>
+		<jsp-api-version>2.1</jsp-api-version>
+		
+		<!-- Test libraries -->
+		<testng-version>6.8.5</testng-version>
+		<spring-test-version>3.2.2.RELEASE</spring-test-version>
+		<hsqldb-version>2.2.9</hsqldb-version>
+		
+		<!-- Plugins -->
+		<maven-compiler-plugin-version>3.1</maven-compiler-plugin-version>
+		<gmaven-plugin-version>1.5</gmaven-plugin-version>
+		<maven-surefire-plugin-version>2.14.1</maven-surefire-plugin-version>
+		<maven-failsafe-plugin-version>2.14.1</maven-failsafe-plugin-version>
+		<bees-maven-plugin-version>1.3.2</bees-maven-plugin-version>
 	</properties>
 
 	<dependencies>
 		<dependency>
 			<groupId>com.google.guava</groupId>
 			<artifactId>guava</artifactId>
-			<version>13.0.1</version>
+			<version>${guava-version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-aop</artifactId>
-			<version>3.1.3.RELEASE</version>
+			<version>${spring-aop-version}</version>
 		</dependency>
+		<dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webmvc</artifactId>
+            <version>${spring-webmvc-version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-rest-webmvc</artifactId>
+            <version>1.0.0.RELEASE</version>
+            <exclusions>
+                <exclusion>
+                    <artifactId>logback-classic</artifactId>
+                    <groupId>ch.qos.logback</groupId>
+                </exclusion>
+            </exclusions>
+        </dependency>
 		<dependency>
 			<groupId>org.aspectj</groupId>
 			<artifactId>aspectjtools</artifactId>
-			<version>1.5.4</version>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-webmvc</artifactId>
-			<version>3.1.3.RELEASE</version>
+			<version>1.7.2</version>
 		</dependency>
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-entitymanager</artifactId>
 			<version>3.6.10.Final</version>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.data</groupId>
-			<artifactId>spring-data-rest-webmvc</artifactId>
-			<version>1.0.0.RELEASE</version>
-			<exclusions>
-				<exclusion>
-					<artifactId>logback-classic</artifactId>
-					<groupId>ch.qos.logback</groupId>
-				</exclusion>
-			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>javax.validation</groupId>
@@ -65,49 +92,49 @@
 		<dependency>
 			<groupId>joda-time</groupId>
 			<artifactId>joda-time</artifactId>
-			<version>2.1</version>
+			<version>${joda-time-version}</version>
 		</dependency>
 		<dependency>
 			<groupId>joda-time</groupId>
 			<artifactId>joda-time-hibernate</artifactId>
-			<version>1.3</version>
+			<version>${joda-time-hibernate-version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.codehaus.groovy</groupId>
 			<artifactId>groovy-all</artifactId>
-			<version>2.0.4</version>
+			<version>${groovy-all-version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
-			<version>1.7.2</version>
+			<version>${slf4j-api-version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-log4j12</artifactId>
-			<version>1.7.2</version>
+			<version>${slf4j-log4j12-version}</version>
 		</dependency>
 		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>jstl</artifactId>
-			<version>1.2</version>
+			<version>${jstl-version}</version>
 		</dependency>
 		<dependency>
 			<groupId>javax.servlet.jsp</groupId>
 			<artifactId>jsp-api</artifactId>
-			<version>2.1</version>
+			<version>${jsp-api-version}</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>servlet-api</artifactId>
-			<version>2.5</version>
+			<version>${servlet-api-version}</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.testng</groupId>
 			<artifactId>testng</artifactId>
-			<version>6.8</version>
+			<version>${testng-version}</version>
 			<scope>test</scope>
 			<exclusions>
 				<exclusion>
@@ -119,13 +146,13 @@
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-test</artifactId>
-			<version>3.1.3.RELEASE</version>
+			<version>${spring-test-version}</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.hsqldb</groupId>
 			<artifactId>hsqldb</artifactId>
-			<version>2.2.9</version>
+			<version>${hsqldb-version}</version>
 			<!--<scope>test</scope> Change me -->
 		</dependency>
 	</dependencies>
@@ -137,7 +164,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>2.5.1</version>
+				<version>${maven-compiler-plugin-version}</version>
 				<configuration>
 					<source>1.6</source>
 					<target>1.6</target>
@@ -146,7 +173,7 @@
 			<plugin>
 				<groupId>org.codehaus.gmaven</groupId>
 				<artifactId>gmaven-plugin</artifactId>
-				<version>1.4</version>
+				<version>${gmaven-plugin-version}</version>
 				<configuration>
 					<providerSelection>2.0</providerSelection>
 				</configuration>
@@ -164,14 +191,14 @@
 					<dependency>
 						<groupId>org.codehaus.groovy</groupId>
 						<artifactId>groovy-all</artifactId>
-						<version>2.0.4</version>
+						<version>${groovy-all-version}</version>
 					</dependency>
 				</dependencies>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.12.4</version>
+				<version>${maven-surefire-plugin-version}</version>
 				<configuration>
 					<groups>unit-test</groups>
 				</configuration>
@@ -179,7 +206,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-failsafe-plugin</artifactId>
-				<version>2.12.4</version>
+				<version>${maven-failsafe-plugin-version}</version>
 				<configuration>
 					<groups>integration-test</groups>
 				</configuration>
@@ -187,7 +214,7 @@
 			<plugin>
 				<groupId>com.cloudbees</groupId>
 				<artifactId>bees-maven-plugin</artifactId>
-				<version>1.3.2</version>
+				<version>${bees-maven-plugin-version}</version>
 			</plugin>
 		</plugins>
 	</build>
