--- a/src/main/resources/database.properties
+++ b/src/main/resources/database.properties
@@ -1,4 +1,4 @@
 database.driverClassName=com.mysql.jdbc.Driver
 database.url=jdbc:mysql://localhost:3306/dev
-database.username=jherrera
-database.password=1ei8gexw
+database.username=interview_runner
+database.password=interview_runner
