--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
 		<guava-version>14.0.1</guava-version>
 		<spring-aop-version>3.2.2.RELEASE</spring-aop-version>
 		<spring-webmvc-version>3.2.2.RELEASE</spring-webmvc-version>
+        <spring-tx-version>3.2.2.RELEASE</spring-tx-version>
 		<groovy-all-version>2.1.3</groovy-all-version>
 		<joda-time-version>2.2</joda-time-version>
 		<joda-time-hibernate-version>1.3</joda-time-hibernate-version>
@@ -58,6 +59,11 @@
 			<artifactId>spring-webmvc</artifactId>
 			<version>${spring-webmvc-version}</version>
 		</dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-tx</artifactId>
+            <version>${spring-tx-version}</version>
+        </dependency>
 		<dependency>
 			<groupId>org.springframework.data</groupId>
 			<artifactId>spring-data-rest-webmvc</artifactId>
@@ -77,7 +83,7 @@
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-entitymanager</artifactId>
-			<version>3.6.10.Final</version>
+			<version>4.2.2.Final</version>
 		</dependency>
 		<dependency>
 			<groupId>commons-dbcp</groupId>
@@ -221,6 +227,11 @@
 					<groups>integration-test</groups>
 				</configuration>
 			</plugin>
+            <plugin>
+                <groupId>com.cloudbees</groupId>
+                <artifactId>bees-maven-plugin</artifactId>
+                <version>${bees-maven-plugin-version}</version>
+            </plugin>
 		</plugins>
 	</build>
 
