--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'java'
 apply plugin: 'groovy'
 apply plugin: 'war'
+apply plugin: 'jetty'
 
 group = 'com.4thsource'
 version = '0.0.1-SNAPSHOT'
@@ -42,10 +43,11 @@ dependencies {
 	compile group: 'joda-time', name: 'joda-time-hibernate', version: '1.3'
 	compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.5'
 	compile group: 'org.slf4j', name: 'slf4j-log4j12', version: '1.7.5'
-	compile group: 'javax.servlet', name: 'jstl', version: '1.2'
 	
 	providedCompile group: 'javax.servlet', name: 'servlet-api', version: '2.5'
 	providedCompile group: 'javax.servlet.jsp', name: 'jsp-api', version: '2.1'
+	
+	runtime group: 'javax.servlet', name: 'jstl', version: '1.2'
 	
 	testCompile group: 'org.testng', name: 'testng', version: '6.8.5'
 	testCompile group: 'org.springframework', name: 'spring-test', version: '3.2.2.RELEASE'
